syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package=".;user_center_pb";

service User{
  rpc Create(UserCenterUserInfo) returns (google.protobuf.Empty); // 添加用户
  rpc Update(UserCenterUserInfo) returns (google.protobuf.Empty); // 更新用户
  rpc DeleteByIds(UserCenterIDS) returns (google.protobuf.Empty); // 删除用户
  rpc FindPage(UserCenterPageInfo) returns (UserCenterUserAll); // 分页查询
  rpc FindByMobile(UserCenterMobile) returns (UserCenterUserInfo); // 指定ID查询
  rpc IsExistByMobile(UserCenterMobile) returns (UserCenterIsExists); //指定Mobile检查数据是否存在
}

message UserCenterUserResp{
  int32 ID =1;
  string mobile=2;
  string nickName=3;
  int32 rule=4;
}

message UserCenterUserAll{
  int64 total=1;
  repeated UserCenterUserResp data=2;
}

message UserCenterUserInfo{
  int32 ID =1;
  string mobile=2;
  string password=3;
  string nickName=4;
  int32 rule=5;
}

message UserCenterPageInfo{
  int32 index =1;
  int32 size =2;
}

message UserCenterIDS{
  repeated int32 ids=1;
}

message UserCenterMobile{
  string mobile=1;
}

message LoginInfo{
  string mobile=1;
  string password=2;
  string codeNum=3;
}

message UserCenterIsExists{
  bool isExist=1;
}